--- a/index.html
+++ b/index.html
@@ -3,58 +3,103 @@
   <head>
     <meta charset="utf-8">
     <title>Berries</title>
-    <link href="css/main" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
   </head>
 
-  Berries
+  <header>
+    <h1>Berries</h1>
+      <nav>
+        <ol>
+          <li><a href="#Blueberries">Blueberries</a></li>
+          <li><a href="#Grapes">Grapes</a></li>
+          <li><a href="#Red Currants">Red Currants</a></li>
+        </ol>
+      </nav>
+  </header>
 
-Blueberries
-Grapes
-Red Currants
+  <body>
 
-In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.
+  <main>
+
+<p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
 
 “
-We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.
-— E. B. White
+<blockquote>We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.</blockquote>
+<cite>— E. B. White</cite>
 
-Blueberries
+<h2>Blueberries</h2>
 
-Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.
+<p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
 
-Vaccinium corymbosum
+  <figure>
 
-Nutrition information
+    <img src="images/blueberries.jpg" alt="Blueberries.">
+    <figcaption>Vaccinium corymbosum</figcaption>
 
-Per 100 g
-Energy 240 kJ
-Carbohydrates 14.49 g
-Protein 0.74 g
+  </figure>
 
-Grapes
-
-Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.
-
-Vitis vinifera
-
-Nutrition information
+<h3>Nutrition information</h3>
 
 Per 100 g
-Energy 288 kJ
-Carbohydrates 18.1 g
-Protein 0.72 g
 
-Red currant
+  <dl>
+    <dt class="info">Energy</dt>
+    <dd class="info2">240 kJ</dd>
+    <dt class="info">Carbohydrates</dt>
+    <dd class="info2">14.49 g</dd>
+    <dt class="info">Protein</dt>
+    <dd class="info2">0.74 g</dd>
+  </dl>
 
-With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.
+<h2>Grapes</h2>
 
-Ribes rubrum
+<p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
 
-Nutrition information
+  <figure>
+
+    <img src="images/grapes.jpg" alt="Grapes.">
+    <figcaption>Vitis vinifera</figcaption>
+
+  </figure>
+
+<h3>Nutrition information</h3>
 
 Per 100 g
-Energy 234 kJ
-Carbohydrates 13.8 g
-Protein 1.4 g
+
+  <dl>
+    <dt class="info">Energy</dt>
+    <dd class="info2">288 kJ</dd>
+    <dt class="info">Carbohydrates</dt>
+    <dd class="info2">18.1 g</dd>
+    <dt class="info">Protein</dt>
+    <dd class="info2">0.72 g</dd>
+
+<h2>Red currant</h2>
+
+<p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+
+  <figure>
+
+    <img src="images/red-currants.jpg" alt="Red Currants.">
+    <figcaption>Ribes rubrum</figcaption>
+
+  </figure>
+
+<h3>Nutrition information</h3>
+
+Per 100 g
+
+  <dl>
+    <dt class="info">Energy</dt>
+    <dd class="info2">234 kJ</dd>
+    <dt class="info">Carbohydrates</dt>
+    <dd class="info2">13.8 g</dd>
+    <dt class="info">Protein</dt>
+    <dd class="info2">1.4 g</dd>
 
 Content and images from Wikipedia.
+
+    </main>
+  </body>
+</html>
