Added more CSS and fixed HTML
Fixed images sizes, figure background colour and border, and fixed the
block quote in HTML

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
 
-“
-<blockquote>We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.</blockquote>
+<blockquote><span>“</span>
+We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.</blockquote>
 <cite>— E. B. White</cite>
 
 <h2>Blueberries</h2>
