--- a/index.html
+++ b/index.html
@@ -97,9 +97,14 @@ Per 100 g
     <dd class="info2">13.8 g</dd>
     <dt class="info">Protein</dt>
     <dd class="info2">1.4 g</dd>
+  </dl>
 
-Content and images from Wikipedia.
 
-    </main>
+  </main>
+
+<footer>
+  Content and images from Wikipedia.
+</footer>
+
   </body>
 </html>
