Added bold and italics to HTML

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main>
 
-<p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+<p>In everyday English, “berry” is a term for any <b>small edible fruit.</b> These “berries” are usually <b>juicy, round, brightly coloured,</b> sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
 
 <blockquote><span>“</span>
 We should all do what, in the long run, gives us joy, even if it is only picking grapes or sorting the laundry.</blockquote>
@@ -41,7 +41,7 @@ We should all do what, in the long run, gives us joy, even if it is only picking
 
 <h3>Nutrition information</h3>
 
-Per 100 g
+<i>Per 100 g</i>
 
   <dl>
     <dt class="info">Energy</dt>
@@ -65,7 +65,7 @@ Per 100 g
 
 <h3>Nutrition information</h3>
 
-Per 100 g
+<i>Per 100 g</i>
 
   <dl>
     <dt class="info">Energy</dt>
@@ -88,7 +88,7 @@ Per 100 g
 
 <h3>Nutrition information</h3>
 
-Per 100 g
+<i>Per 100 g</i>
 
   <dl>
     <dt class="info">Energy</dt>
